plugins/javaFX/testData/highlighting/unresolvedTopLevelController.fxml
<?xml version="1.0" encoding="UTF-8"?>
<?import javafx.scene.layout.*?>
<AnchorPane id="AnchorPane" xmlns:fx="http://javafx.com/fxml" fx:controller="<error descr="Cannot resolve class or package 'unknownPackage'">unknownPackage</error>.<error descr="Cannot resolve class 'UnknownClass'">UnknownClass</error>">
  <children>
    <AnchorPane id="anchorPane2" <error descr="fx:controller can only be applied to root element">fx:controller</error>="java.util.ArrayList">
      <children>
      </children>
    </AnchorPane>
  </children>
</AnchorPane>
